authorization section start

--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -1,14 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Bithoven</title>
+	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="assets/styles/index.css">
 </head>
+
 <body>
-	<h1>It's a simple title 2</h1>
+	<header class="header"> </header>
+
+	<main>
+		<section class="authorization">
+			<div class="container">
+				<h1 class="title authorization__title">
+					Вам нужен кошелек Ethereum,
+					чтобы использовать Bithoven
+				</h1>
+
+				<p class="subtitle authorization__subtitle">
+					Подключитесь к одному из наших доступных поставщиков
+					кошельков или создайте новый
+				</p>
+
+				<div class="authorization__content">
+					<div class="authorization__wrap">
+						<div class="authorization__linkWrap">
+							<a class="linkWallet authorization__linkWallet authorization__linkWallet_subject_metamask">
+
+							</a>
+							<p>
+								Meta Mask
+							</p>
+						</div>
+
+						<div class="authorization__linkWrap">
+							<a class="linkWallet authorization__linkWallet authorization__linkWallet_subject_binance">
+
+							</a>
+							<p>
+								Binance Wallet
+							</p>
+						</div>
+
+						<div class="authorization__linkWrap">
+							<a class="linkWallet authorization__linkWallet authorization__linkWallet_subject_coinbase">
+
+							</a>
+							<p>
+								Coinbase Wallet
+							</p>
+						</div>
+
+						<div class="authorization__linkWrap">
+							<a class="linkWallet authorization__linkWallet"> </a>
+							<p>
+								Дополнительно
+							</p>
+						</div>
+					</div>
+					<p class="authorization__text">
+						У вас еще нет притокашелька?
+					</p>
+
+					<button class="authorization__btnText btnText">
+						Как подключить
+					</button>
+				</div>
+			</div>
+		</section>
+	</main>
+
+
+
 	<script src="assets/scripts/index.js"></script>
+	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
+
+</html>
+
 </html>
