--- a/source/markup/aut.html
+++ b/source/markup/aut.html
@@ -11,52 +11,49 @@
 </head>
 
 <body class="body">
-	<header class="header"> </header>
-
-	<section class="aut container">
-		<h1 class="title aut__title">
+	<section class="authoriz container">
+		<h1 class="title authoriz__title">
 			Вам нужен кошелек Ethereum,
 			чтобы использовать Bithoven
 		</h1>
 
-		<p class="parag aut__parag">
+		<p class="paragraph authoriz__paragraph">
 			Подключитесь к одному из наших доступных поставщиков
 			кошельков или создайте новый
 		</p>
 
-		<div class="aut-form">
-			<div class="aut-form__wrap">
-				<a class="link-wallet aut-form__link-wallet aut-form__link-wallet_subject_metamask">
-					<p class="parag">
+		<div class="authoriz__aut-form">
+			<div class="authoriz__wrap">
+				<a class="authoriz__link-wallet authoriz__link-wallet_subject_metamask">
+					<p class="paragraph">
 						Meta Mask
 					</p>
 				</a>
 
-				<a class="link-wallet aut-form__link-wallet aut-form__link-wallet_subject_binance">
-					<p class="parag">
+				<a class="authoriz__link-wallet authoriz__link-wallet_subject_binance">
+					<p class="paragraph">
 						Binance Wallet
 					</p>
 				</a>
 
-				<a class="link-wallet aut-form__link-wallet aut-form__link-wallet_subject_coinbase">
-					<p class="parag">
+				<a class="authoriz__link-wallet authoriz__link-wallet_subject_coinbase">
+					<p class="paragraph">
 						Coinbase Wallet
 					</p>
 				</a>
 
-				<a class="link-wallet aut-form__link-wallet aut-form__link-wallet_subject_all">
-					<p class="parag">
+				<a class="authoriz__link-wallet authoriz__link-wallet_subject_all">
+					<p class="paragraph">
 						Дополнительно
 					</p>
 				</a>
 			</div>
 
-			<p class="parag aut-form__parag">
+			<p class="paragraph authoriz__paragraph">
 				У вас еще нет притокашелька?
 			</p>
 
-
-				<a class="aut-form__link-button link-button">
+				<a class="button authoriz__button">
 					Как подключить
 				</a>
 		</div>
@@ -65,7 +62,6 @@
 	<script src="assets/scripts/index.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
-
 </html>
 
 
