--- a/source/markup/auth.html
+++ b/source/markup/auth.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="pages">
+<html lang="en" class="page">
 
 <head>
 	<meta charset="UTF-8">
@@ -10,50 +10,50 @@
 	<link rel="stylesheet" href="assets/styles/index.css">
 </head>
 
-<body class="body">
-	<section class="authoriz container">
-		<h1 class="title authoriz__title">
+<body class="page__body">
+	<section class="auth container">
+		<h1 class="title auth__title">
 			Вам нужен кошелек Ethereum,
 			чтобы использовать Bithoven
 		</h1>
 
-		<p class="paragraph authoriz__paragraph">
+		<p class="paragraph auth__paragraph">
 			Подключитесь к одному из наших доступных поставщиков
 			кошельков или создайте новый
 		</p>
 
-		<div class="authoriz__aut-form">
-			<div class="authoriz__wrap">
-				<a class="authoriz__link-wallet authoriz__link-wallet_subject_metamask">
+		<div class="auth__auth-form">
+			<div class="auth__wrap">
+				<a class="auth__link-wallet auth__link-wallet_subject_metamask">
 					<p class="paragraph">
 						Meta Mask
 					</p>
 				</a>
 
-				<a class="authoriz__link-wallet authoriz__link-wallet_subject_binance">
+				<a class="auth__link-wallet auth__link-wallet_subject_binance">
 					<p class="paragraph">
 						Binance Wallet
 					</p>
 				</a>
 
-				<a class="authoriz__link-wallet authoriz__link-wallet_subject_coinbase">
+				<a class="auth__link-wallet auth__link-wallet_subject_coinbase">
 					<p class="paragraph">
 						Coinbase Wallet
 					</p>
 				</a>
 
-				<a class="authoriz__link-wallet authoriz__link-wallet_subject_all">
+				<a class="auth__link-wallet auth__link-wallet_subject_all">
 					<p class="paragraph">
 						Дополнительно
 					</p>
 				</a>
 			</div>
 
-			<p class="paragraph authoriz__paragraph">
+			<p class="paragraph auth__text">
 				У вас еще нет притокашелька?
 			</p>
 
-				<a class="button authoriz__button">
+				<a class="button auth__button">
 					Как подключить
 				</a>
 		</div>
