footer end / interesting start

--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -11,124 +11,196 @@
 </head>
 
 <body class="page__body">
-	<article class="footer container">
-		<div class="footer__top">
-			<img src="assets/images/logo.svg" alt="логотип">
 
-			<p class="text footer__text">
-				RU
-			</p>
+
+
+
+
+	<section class="interesting container">
+		<div class="interesting__top">
+			<h2 class="title interesting__title">
+				Возможно, вам будет интерестно
+			</h2>
+
+			<a class="button button_form_clear" href="">
+				Смотреть все
+			</a>
 		</div>
 
-			<div class="footer__list">
-				<span class="footer__span">Discover</span>
-				<ul class="menu footer__menu footer__menu_state_active">
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Темы
-						</a>
-					</li>
+		<div class="interesting__wrap">
+			<div class="interesting__content">
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Викторины
+				<div class="card">
+					<div class="card__top">
+						<p class="text card__text">
+							12 минут
+						</p>
+						<a class="link link_value_new" href="">
+							Новичок
 						</a>
-					</li>
+					</div>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Глоссарий
-						</a>
-					</li>
+					<h2 class="title card__title">
+						Что такое BETH и как он работает?
+					</h2>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Bitcoin Халвинг
-						</a>
-					</li>
-				</ul>
+					<div class="card__content">
+						<img class="card__img" src="assets/images/interesting/eth.png" alt="">
+					</div>
+				</div>
 			</div>
 
-			<div class="footer__list">
-				<span class="footer__span">Продукт</span>
-				<ul class="menu footer__menu">
-					<li class="footer__item">
-						<a class="link link footer__link" href="#">
-							Биржа
-						</a>
-					</li>
+		</div>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Исследование
-						</a>
-					</li>
+	</section>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Кошелек
-						</a>
-					</li>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Панель запуска
-						</a>
-					</li>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							BCF
-						</a>
-					</li>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Lobs
-						</a>
-					</li>
-				</ul>
+
+
+
+	<footer class="footer container">
+		<div class="footer__top">
+			<div class="footer__img-wrap">
+				<img class="logo footer__logo" src="assets/images/logo.svg" alt="логотип">
 			</div>
 
-			<div class="footer__list">
-				<span class="footer__span">Компания</span>
-				<ul class="menu footer__menu">
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Условия
-						</a>
-					</li>
+			<p class="text footer__lang footer__lang_media_desktop">
+				RU
+			</p>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Политика конфиденциальности
-						</a>
-					</li>
+			<p class="text footer__text_media_desktop">
+				Copyright © 2022 Bithoven.com.
+				All rights reserved.
+			</p>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Дисклеймер
-						</a>
-					</li>
+			<div class="footer__social_media_desktop">
+				<div class="footer__icon footer__icon_net_telegramm"> </div>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Запрос статьи
-						</a>
-					</li>
+				<div class="footer__icon footer__icon_net_youtube"> </div>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Обатрая связь
-						</a>
-					</li>
+				<div class="footer__icon footer__icon_net_inst"> </div>
 
-					<li class="footer__item">
-						<a class="link footer__link" href="#">
-							Руководство по переводу
-						</a>
-					</li>
-				</ul>
+				<div class="footer__icon footer__icon_net_facebook"> </div>
+
+				<div class="footer__icon footer__icon_net_discord"> </div>
+			</div>
+
+			<div class="footer__load_media_desktop">
+				<img class="footer__img" src="assets/images/footer/appstore.png" alt="appstore">
+				<img class="footer__img" src="assets/images/footer/googleplay.png" alt="googleplay">
+			</div>
+		</div>
+		<div class="footer__list">
+			<button class="button button_form_none footer__button">Discover</button>
+			<ul class="menu footer__menu footer__menu_state_active">
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Темы
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Викторины
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Глоссарий
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Bitcoin Халвинг
+					</a>
+				</li>
+			</ul>
+		</div>
+
+		<div class="footer__list">
+			<button class="button button_form_none footer__button">Продукт</button>
+			<ul class="menu footer__menu">
+				<li class="footer__item">
+					<a class="link link footer__link" href="#">
+						Биржа
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Исследование
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Кошелек
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Панель запуска
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						BCF
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Lobs
+					</a>
+				</li>
+			</ul>
+		</div>
+
+		<div class="footer__list">
+			<button class="button button_form_none footer__button">Компания</button>
+			<ul class="menu footer__menu">
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Условия
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Политика конфиденциальности
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Дисклеймер
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Запрос статьи
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Обатрая связь
+					</a>
+				</li>
+
+				<li class="footer__item">
+					<a class="link footer__link" href="#">
+						Руководство по переводу
+					</a>
+				</li>
+			</ul>
 		</div>
 
 		<div class="footer__load">
@@ -148,14 +220,13 @@
 			<div class="footer__icon footer__icon_net_discord"> </div>
 		</div>
 
-			<p class="text footer__text_size_smal">
-				Copyright © 2022 Bithoven.com.
-				All rights reserved.
-			</p>
-	</article>
-
-	<script src="assets/scripts/index.js"></script>
-	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+		<p class="text footer__text_size_smal">
+			Copyright © 2022 Bithoven.com.
+			All rights reserved.
+		</p>
+		</а>
+		<script src="assets/scripts/index.js"></script>
+		<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
 
 </html>
