section interesting end

--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -12,10 +12,6 @@
 
 <body class="page__body">
 
-
-
-
-
 	<section class="interesting container">
 		<div class="interesting__top">
 			<h2 class="title interesting__title">
@@ -27,29 +23,66 @@
 			</a>
 		</div>
 
-		<div class="interesting__wrap">
-			<div class="interesting__content">
+		<div class="interesting__content">
+			<div class="card">
+				<div class="card__top">
+					<p class="text card__text">
+						12 минут
+					</p>
 
-				<div class="card">
-					<div class="card__top">
-						<p class="text card__text">
-							12 минут
-						</p>
-						<a class="link link_value_new" href="">
-							Новичок
-						</a>
-					</div>
+					<a class="link link_level_new" href="">
+						Новичок
+					</a>
+				</div>
 
-					<h2 class="title card__title">
-						Что такое BETH и как он работает?
-					</h2>
+				<h2 class="title card__title">
+					Что такое BETH и как он работает?
+				</h2>
 
-					<div class="card__content">
-						<img class="card__img" src="assets/images/interesting/eth.png" alt="">
-					</div>
+				<div class="card__content">
+					<img class="card__img" src="assets/images/interesting/eth.png" alt="">
 				</div>
 			</div>
 
+			<div class="card">
+				<div class="card__top">
+					<p class="text card__text">
+						12 минут
+					</p>
+
+					<a class="link link_level_advanced" href="">
+						Продвинутый
+					</a>
+				</div>
+
+				<h2 class="title card__title">
+					Что такое Harmony (ONE)?
+				</h2>
+
+				<div class="card__content">
+					<img class="card__img" src="assets/images/interesting/one.png" alt="">
+				</div>
+			</div>
+
+			<div class="card">
+				<div class="card__top">
+					<p class="text card__text">
+						12 минут
+					</p>
+
+					<a class="link link_level_advanced" href="">
+						Продвинутый
+					</a>
+				</div>
+
+				<h2 class="title card__title">
+					Что такое Polygon (MATIC)?
+				</h2>
+
+				<div class="card__content">
+					<img class="card__img" src="assets/images/interesting/matic.png" alt="">
+				</div>
+			</div>
 		</div>
 
 	</section>
