content html end

--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -12,6 +12,206 @@
 
 <body class="page__body">
 
+	<section class="content">
+		<div class="content__nav">
+			<a class="link content_link" href="#">
+				Главная
+			</a>
+			<a class="link content_link" href="#">
+				Статьи
+			</a>
+			<a class="link content_link" href="#">
+				Что такое фан-токен ФК «Порту» (PORTO)?
+			</a>
+		</div>
+
+		<h1 class="title">
+			Что такое фан-токен ФК «Порту» (PORTO)?
+		</h1>
+
+		<div class="card">
+			<div class="card__top">
+				<p class="text card__text">
+					4 минуты
+				</p>
+
+				<a class="link link_level_advanced" href="">
+					Продвинутый
+				</a>
+			</div>
+
+			<div class="card__content">
+				<img class="card__img" src="assets/images/interesting/matic.png" alt="">
+			</div>
+
+			<a class="button" href="#">
+				Altcoin
+			</a>
+		</div>
+
+		<div class="content__text">
+			<p>
+				Осторожно! Много текста.
+			</p>
+
+			<p>
+				Фан-токен ФК «Порту» (PORTO) — это utility-токен BEP-20 футбольного клуба «Порту», запущенный в 2021 году на
+				Binance
+				Launchpad. Его цель — предоставлять фанатам и держателям токена эксклюзивные возможности и привилегии.
+			</p>
+
+			<p>
+				Владельцы PORTO могут голосовать за решения, связанные с клубом, такие как выбор песни для разминки и
+				приветственного
+				сообщения для следующего матча. PORTO также можно использовать для покупки NFT мистери-боксов от ФК «Порту», а
+				затем
+				добавлять полученные NFT в стейкинг и зарабатывать дополнительные вознаграждения на платформе фан-токенов
+				Binance.
+			</p>
+		</div>
+
+		<h2 class="title">
+			Введение
+		</h2>
+
+		<div class="content__text">
+			<p>
+				Благодаря миру криптовалют преданные фанаты теперь могут напрямую взаимодействовать со своими любимыми
+				спортивными
+				командами и знаменитостями в более инновационном формате. Фан-токены — это новый тренд, в котором технология
+				блокчейн
+				создает эксклюзивные возможности как для любителей спорта, так и для болельщиков.
+			</p>
+		</div>
+
+		<img class="content__adt" src="assets/images/content/adt.png" alt="реклама">
+
+		<h2>
+			Что такое фан-токены Binance?
+		</h2>
+
+		<div class="content__text">
+			<p>
+				Фан-токены Binance — это utility-токены спортивных клубов, команд, знаменитостей или брендов с большой
+				аудиторией.
+				Владельцы фан-токенов могут наслаждаться уникальными привилегиями, включая предварительные продажи билетов на
+				мероприятия и коллекционирование специальных невзаимозаменяемых токенов (NFT). В некоторых случаях они также
+				могут
+				влиять на решения, связанные с клубом: выбор новой формы, музыки для выхода и многого другого. Платформа
+				фан-токенов
+				Binance является официальным партнером футбольных команд «Лацио» (LAZIO), «Порту» (PORTO) и «Сантос» (SANTOS).
+			</p>
+
+			<p>
+				В отличие от NFT, фан-токены Binance являются полностью взаимозаменяемыми, как BNB, биткоин (BTC), Ethereum
+				(ETH) и
+				другие криптовалюты. Взаимозаменяемость означает, что каждый отдельный токен имеет одинаковую ценность и
+				полезность.
+			</p>
+		</div>
+
+		<h2>
+			Что такое фан-токен ФК «Порту» (PORTO) и как он работает?
+		</h2>
+
+		<div class="content__text">
+			<p>
+				Футбольный клуб «Порту» был основан в 1893 году и завоевал наибольшее количество международных наград в
+				«Примейра-лиге» Португалии, а также добился множества других успехов по всей Европе, включая две победы в «Лиге
+				чемпионов УЕФА». Чтобы стать ближе к своим болельщикам, в 2021 году клуб заключил партнерство с платформой
+				Binance и
+				выпустил фан-токены ФК «Порту» (PORTO).
+			</p>
+
+			<p>
+				PORTO стал вторым фан-токеном, выпущенным в рамках токенсейла на Binance Launchpad. Это utility-токен BEP-20 на
+				BNB
+				Chain (ранее Binance Smart Chain, BSC) с общим предложением в 40 миллионов.
+			</p>
+		</div>
+
+		<img class="content__img" src="assets/images/content/porto-info.png" alt="токен порту">
+
+		<div class="content__text">
+			<p>
+				У PORTO есть несколько вариантов использования для взаимодействия с фанатами в экосистеме Binance. В качестве
+				utility-токена PORTO предоставляет держателям право управления для участия в голосованиях, связанных с
+				португальским
+				футбольным клубом. Чем больше у вас фан-токенов, тем больший вес имеет ваш голос во время принятия решений.
+				Например,
+				владельцы PORTO могут выбрать песню для разминки команды перед предстоящим матчем, а также приветственное
+				сообщение,
+				которое будет отображаться во время игры.
+			</p>
+			<p>
+				Помимо этого владельцы фан-токенов могут использовать PORTO для покупки мистери-боксов NFT от ФК «Порту». В них
+				содержатся обычные, редкие или суперредкие NFT из уникальной коллекции. Например, в первой коллекции NFT PORTO
+				были
+				представлены легендарные вратари команды.
+				NFT PORTO можно не только коллекционировать, но и использовать в NFT PowerStation — инновационной функции
+				геймификации
+				на платформе фан-токенов Binance. Добавляя необходимые NFT, пользователи могут получать дополнительные
+				вознаграждения в
+				виде PORTO. Чем дольше NFT находятся в стейкинге, тем больше наград получают фанаты. Полученные NFT также можно
+				обменять
+				на NFT-маркетплейсе Binance.
+			</p>
+			<p>
+				В будущем владельцы токенов смогут использовать PORTO для подписок на программы лояльности, в которые входят
+				специальные
+				награды и значки болельщиков, а также для встреч с игроками и получения бесплатного мерча. С помощью PORT
+				болельщики
+				также могут оплачивать билеты на матчи и членство на платформе электронной коммерции ФК «Порту» через Binance
+				Pay.
+			</p>
+		</div>
+
+		<img class="content__video" src="assets/images/content/video.png" alt="видео про токен порту">
+
+		<h2 class="title">
+			Как купить PORTO на Binance?
+		</h2>
+
+		<div class="content__text">
+			<p>
+				Купить PORTO можно на криптовалютной бирже, такой как Binance.
+			</p>
+			<p>
+				1.Войдите в свой аккаунт Binance и перейдите во вкладку вкладку [Торговля]. Выберите [Классический] или
+				[Продвинутый]
+				интерфейс.
+			</p>
+			<p>
+				2.Нажмите [BTC/USDT], чтобы открыть панель поиска. Введите «PORTO», чтобы просмотреть доступные торговые пары.
+				В
+				качестве примера мы будем использовать PORTO/USDT.
+			</p>
+			<p>
+				3.Перейдите в раздел [Спот] справа и выберите тип ордера, например рыночный. Введите количество PORTO, которое
+				хотите
+				купить, и нажмите [Купить PORTO], чтобы разместить ордер. Приобретенные токены будут перечислены на ваш спотовый
+				кошелек.
+			</p>
+		</div>
+
+		<div class="content__buysell">
+			<img class="content__img" src="build/assets/images/content/bay.png" alt="как купить токен порту">
+			<img class="content__img" src="build/assets/images/content/sell.png" alt="как продать токен порту">
+		</div>
+
+		<h2 class="title">
+			U+26A1 Резюме
+		</h2>
+
+		<div class="content__text">
+			<p>
+				Фан-токены открывают фанатам уникальные способы взаимодействия с любимыми командами. Поскольку платформа фан-токенов
+				Binance разрабатывает все новые способы использования фан-токенов, в будущем PORTO принесет владельцам еще больше
+				захватывающих возможностей.
+			</p>
+		</div>
+	</section>
+
 	<section class="interesting container">
 		<div class="interesting__top">
 			<h2 class="title interesting__title">
