html content fix

--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -13,7 +13,7 @@
 <body class="page__body">
 
 	<section class="content">
-		<div class="content__nav">
+		<div class="content__top">
 			<a class="link content_link" href="#">
 				Главная
 			</a>
@@ -47,6 +47,58 @@
 			<a class="button" href="#">
 				Altcoin
 			</a>
+		</div>
+
+		<nav class="content__nav">
+			<ul class="menu content__menu">
+				<li class="content__item">
+					<a class="content__link" href="#">
+						Введение
+					</a>
+				</li>
+
+				<li class="content__item">
+					<a class="content__link" href="#">
+						Что такое фан- токены Binance?
+					</a>
+				</li>
+
+				<li class="content__item">
+					<a class="content__link" href="#">
+						Что такое фан-токен ФК «Порту» (PORTO) и как он работает?
+					</a>
+				</li>
+
+				<li class="content__item">
+					<a class="content__link" href="#">
+						Резюме
+					</a>
+				</li>
+
+				<li class="content__item">
+					<a class="content__link" href="#">
+						Как купить PORTO на Binance?
+					</a>
+				</li>
+			</ul>
+		</nav>
+
+		<div class="content__social">
+			<p>
+				10 Нравится
+			</p>
+
+			<p>
+				Не нравится
+			</p>
+
+			<p>
+				Обсудить
+			</p>
+
+			<p>
+				Поделиться
+			</p>
 		</div>
 
 		<div class="content__text">
@@ -205,8 +257,10 @@
 
 		<div class="content__text">
 			<p>
-				Фан-токены открывают фанатам уникальные способы взаимодействия с любимыми командами. Поскольку платформа фан-токенов
-				Binance разрабатывает все новые способы использования фан-токенов, в будущем PORTO принесет владельцам еще больше
+				Фан-токены открывают фанатам уникальные способы взаимодействия с любимыми командами. Поскольку платформа
+				фан-токенов
+				Binance разрабатывает все новые способы использования фан-токенов, в будущем PORTO принесет владельцам еще
+				больше
 				захватывающих возможностей.
 			</p>
 		</div>
