interesting mobile fix

--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -41,7 +41,7 @@
 			</div>
 
 			<div class="card__content">
-				<img class="card__img" src="assets/images/interesting/matic.png" alt="">
+				<img class="card__img" src="assets/images/content/portu-logo.png" alt="логотип порту">
 			</div>
 
 			<a class="button" href="#">
@@ -52,31 +52,31 @@
 		<nav class="content__nav">
 			<ul class="menu content__menu">
 				<li class="content__item">
-					<a class="content__link" href="#">
+					<a class="link content__link" href="#">
 						Введение
 					</a>
 				</li>
 
 				<li class="content__item">
-					<a class="content__link" href="#">
+					<a class="link content__link" href="#">
 						Что такое фан- токены Binance?
 					</a>
 				</li>
 
 				<li class="content__item">
-					<a class="content__link" href="#">
+					<a class="link content__link" href="#">
 						Что такое фан-токен ФК «Порту» (PORTO) и как он работает?
 					</a>
 				</li>
 
 				<li class="content__item">
-					<a class="content__link" href="#">
+					<a class="link content__link" href="#">
 						Резюме
 					</a>
 				</li>
 
 				<li class="content__item">
-					<a class="content__link" href="#">
+					<a class="link content__link" href="#">
 						Как купить PORTO на Binance?
 					</a>
 				</li>
@@ -136,7 +136,7 @@
 			</p>
 		</div>
 
-		<img class="content__adt" src="assets/images/content/adt.png" alt="реклама">
+		<!-- <img class="content__adt" src="assets/images/content/adt.png" alt="реклама"> -->
 
 		<h2>
 			Что такое фан-токены Binance?
@@ -182,7 +182,7 @@
 			</p>
 		</div>
 
-		<img class="content__img" src="assets/images/content/porto-info.png" alt="токен порту">
+		<!-- <img class="content__img" src="assets/images/content/porto-info.png" alt="токен порту"> -->
 
 		<div class="content__text">
 			<p>
@@ -218,7 +218,7 @@
 			</p>
 		</div>
 
-		<img class="content__video" src="assets/images/content/video.png" alt="видео про токен порту">
+		<!-- <img class="content__video" src="assets/images/content/video.png" alt="видео про токен порту"> -->
 
 		<h2 class="title">
 			Как купить PORTO на Binance?
@@ -247,12 +247,12 @@
 		</div>
 
 		<div class="content__buysell">
-			<img class="content__img" src="build/assets/images/content/bay.png" alt="как купить токен порту">
-			<img class="content__img" src="build/assets/images/content/sell.png" alt="как продать токен порту">
+			<img class="content__img" src="assets/images/content/bay.png" alt="как купить токен порту">
+			<img class="content__img" src="assets/images/content/sell.png" alt="как продать токен порту">
 		</div>
 
 		<h2 class="title">
-			U+26A1 Резюме
+			⚡ Резюме
 		</h2>
 
 		<div class="content__text">
@@ -272,9 +272,11 @@
 				Возможно, вам будет интерестно
 			</h2>
 
-			<a class="button button_form_clear" href="">
-				Смотреть все
-			</a>
+			<div class="interesting__link-wrap">
+				<a class="button button_form_clear interesting__button" href="">
+					Смотреть все
+				</a>
+			</div>
 		</div>
 
 		<div class="interesting__content">
@@ -284,7 +286,7 @@
 						12 минут
 					</p>
 
-					<a class="link link_level_new" href="">
+					<a class="link link_level_new card__link_size_small" href="">
 						Новичок
 					</a>
 				</div>
@@ -294,7 +296,8 @@
 				</h2>
 
 				<div class="card__content">
-					<img class="card__img" src="assets/images/interesting/eth.png" alt="">
+					<img class="card__img card__img_media_decktop" src="assets/images/interesting/eth.png" alt="">
+					<img class="card__img card__img_media_mobail" src="assets/images/interesting/eth-mob.png" alt="">
 				</div>
 			</div>
 
@@ -304,7 +307,7 @@
 						12 минут
 					</p>
 
-					<a class="link link_level_advanced" href="">
+					<a class="link link_level_advanced card__link_size_small" href="">
 						Продвинутый
 					</a>
 				</div>
@@ -314,7 +317,8 @@
 				</h2>
 
 				<div class="card__content">
-					<img class="card__img" src="assets/images/interesting/one.png" alt="">
+					<img class="card__img card__img_media_decktop" src="assets/images/interesting/one.png" alt="">
+					<img class="card__img card__img_media_mobail" src="assets/images/interesting/one-mob.png" alt="">
 				</div>
 			</div>
 
@@ -324,7 +328,7 @@
 						12 минут
 					</p>
 
-					<a class="link link_level_advanced" href="">
+					<a class="link link_level_advanced card__link_size_small" href="">
 						Продвинутый
 					</a>
 				</div>
@@ -334,9 +338,14 @@
 				</h2>
 
 				<div class="card__content">
-					<img class="card__img" src="assets/images/interesting/matic.png" alt="">
+					<img class="card__img card__img_media_decktop" src="assets/images/interesting/matic.png" alt="">
+					<img class="card__img card__img_media_mobail" src="assets/images/interesting/matic-mob.png" alt="">
 				</div>
 			</div>
+		</div>
+
+		<div class="interesting__line">
+
 		</div>
 
 	</section>
