content style start

--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -11,7 +11,6 @@
 </head>
 
 <body class="page__body">
-
 	<section class="content">
 		<div class="content__top">
 			<a class="link content_link" href="#">
@@ -44,9 +43,11 @@
 				<img class="card__img" src="assets/images/content/portu-logo.png" alt="логотип порту">
 			</div>
 
-			<a class="button" href="#">
-				Altcoin
-			</a>
+			<div class="content__button-wrap">
+				<a class="button" href="#">
+					Altcoin
+				</a>
+			</div>
 		</div>
 
 		<nav class="content__nav">
@@ -84,35 +85,35 @@
 		</nav>
 
 		<div class="content__social">
-			<p>
+			<button>
 				10 Нравится
-			</p>
+			</button>
 
-			<p>
+			<button>
 				Не нравится
-			</p>
+			</button>
 
-			<p>
+			<button>
 				Обсудить
-			</p>
+			</button>
 
-			<p>
+			<button>
 				Поделиться
-			</p>
+			</button>
 		</div>
 
 		<div class="content__text">
-			<p>
+			<p class="text">
 				Осторожно! Много текста.
 			</p>
 
-			<p>
+			<p class="text">
 				Фан-токен ФК «Порту» (PORTO) — это utility-токен BEP-20 футбольного клуба «Порту», запущенный в 2021 году на
 				Binance
 				Launchpad. Его цель — предоставлять фанатам и держателям токена эксклюзивные возможности и привилегии.
 			</p>
 
-			<p>
+			<p class="text">
 				Владельцы PORTO могут голосовать за решения, связанные с клубом, такие как выбор песни для разминки и
 				приветственного
 				сообщения для следующего матча. PORTO также можно использовать для покупки NFT мистери-боксов от ФК «Порту», а
@@ -127,7 +128,7 @@
 		</h2>
 
 		<div class="content__text">
-			<p>
+			<p class="text">
 				Благодаря миру криптовалют преданные фанаты теперь могут напрямую взаимодействовать со своими любимыми
 				спортивными
 				командами и знаменитостями в более инновационном формате. Фан-токены — это новый тренд, в котором технология
@@ -143,7 +144,7 @@
 		</h2>
 
 		<div class="content__text">
-			<p>
+			<p class="text">
 				Фан-токены Binance — это utility-токены спортивных клубов, команд, знаменитостей или брендов с большой
 				аудиторией.
 				Владельцы фан-токенов могут наслаждаться уникальными привилегиями, включая предварительные продажи билетов на
@@ -154,7 +155,7 @@
 				Binance является официальным партнером футбольных команд «Лацио» (LAZIO), «Порту» (PORTO) и «Сантос» (SANTOS).
 			</p>
 
-			<p>
+			<p class="text">
 				В отличие от NFT, фан-токены Binance являются полностью взаимозаменяемыми, как BNB, биткоин (BTC), Ethereum
 				(ETH) и
 				другие криптовалюты. Взаимозаменяемость означает, что каждый отдельный токен имеет одинаковую ценность и
@@ -167,7 +168,7 @@
 		</h2>
 
 		<div class="content__text">
-			<p>
+			<p class="text">
 				Футбольный клуб «Порту» был основан в 1893 году и завоевал наибольшее количество международных наград в
 				«Примейра-лиге» Португалии, а также добился множества других успехов по всей Европе, включая две победы в «Лиге
 				чемпионов УЕФА». Чтобы стать ближе к своим болельщикам, в 2021 году клуб заключил партнерство с платформой
@@ -175,7 +176,7 @@
 				выпустил фан-токены ФК «Порту» (PORTO).
 			</p>
 
-			<p>
+			<p class="text">
 				PORTO стал вторым фан-токеном, выпущенным в рамках токенсейла на Binance Launchpad. Это utility-токен BEP-20 на
 				BNB
 				Chain (ранее Binance Smart Chain, BSC) с общим предложением в 40 миллионов.
@@ -185,7 +186,7 @@
 		<!-- <img class="content__img" src="assets/images/content/porto-info.png" alt="токен порту"> -->
 
 		<div class="content__text">
-			<p>
+			<p class="text">
 				У PORTO есть несколько вариантов использования для взаимодействия с фанатами в экосистеме Binance. В качестве
 				utility-токена PORTO предоставляет держателям право управления для участия в голосованиях, связанных с
 				португальским
@@ -195,7 +196,7 @@
 				сообщение,
 				которое будет отображаться во время игры.
 			</p>
-			<p>
+			<p class="text">
 				Помимо этого владельцы фан-токенов могут использовать PORTO для покупки мистери-боксов NFT от ФК «Порту». В них
 				содержатся обычные, редкие или суперредкие NFT из уникальной коллекции. Например, в первой коллекции NFT PORTO
 				были
@@ -208,7 +209,7 @@
 				обменять
 				на NFT-маркетплейсе Binance.
 			</p>
-			<p>
+			<p class="text">
 				В будущем владельцы токенов смогут использовать PORTO для подписок на программы лояльности, в которые входят
 				специальные
 				награды и значки болельщиков, а также для встреч с игроками и получения бесплатного мерча. С помощью PORT
@@ -219,50 +220,54 @@
 		</div>
 
 		<!-- <img class="content__video" src="assets/images/content/video.png" alt="видео про токен порту"> -->
+		<div class="content__buy">
+			<h2 class="title">
+				Как купить PORTO на Binance?
+			</h2>
 
-		<h2 class="title">
-			Как купить PORTO на Binance?
-		</h2>
+			<div class="content__text">
+				<p class="text">
+					Купить PORTO можно на криптовалютной бирже, такой как Binance.
+				</p>
+				<p class="text">
+					1.Войдите в свой аккаунт Binance и перейдите во вкладку вкладку [Торговля]. Выберите [Классический] или
+					[Продвинутый]
+					интерфейс.
+				</p>
+				<p class="text">
+					2.Нажмите [BTC/USDT], чтобы открыть панель поиска. Введите «PORTO», чтобы просмотреть доступные торговые пары.
+					В
+					качестве примера мы будем использовать PORTO/USDT.
+				</p>
+				<p class="text">
+					3.Перейдите в раздел [Спот] справа и выберите тип ордера, например рыночный. Введите количество PORTO, которое
+					хотите
+					купить, и нажмите [Купить PORTO], чтобы разместить ордер. Приобретенные токены будут перечислены на ваш
+					спотовый
+					кошелек.
+				</p>
+			</div>
 
-		<div class="content__text">
-			<p>
-				Купить PORTO можно на криптовалютной бирже, такой как Binance.
-			</p>
-			<p>
-				1.Войдите в свой аккаунт Binance и перейдите во вкладку вкладку [Торговля]. Выберите [Классический] или
-				[Продвинутый]
-				интерфейс.
-			</p>
-			<p>
-				2.Нажмите [BTC/USDT], чтобы открыть панель поиска. Введите «PORTO», чтобы просмотреть доступные торговые пары.
-				В
-				качестве примера мы будем использовать PORTO/USDT.
-			</p>
-			<p>
-				3.Перейдите в раздел [Спот] справа и выберите тип ордера, например рыночный. Введите количество PORTO, которое
-				хотите
-				купить, и нажмите [Купить PORTO], чтобы разместить ордер. Приобретенные токены будут перечислены на ваш спотовый
-				кошелек.
-			</p>
+			<div class="content__buysell">
+				<img class="content__img" src="assets/images/content/bay.png" alt="как купить токен порту">
+				<img class="content__img" src="assets/images/content/sell.png" alt="как продать токен порту">
+			</div>
 		</div>
 
-		<div class="content__buysell">
-			<img class="content__img" src="assets/images/content/bay.png" alt="как купить токен порту">
-			<img class="content__img" src="assets/images/content/sell.png" alt="как продать токен порту">
-		</div>
+		<div class="content__summary">
+			<h2 class="title">
+				⚡ Резюме
+			</h2>
 
-		<h2 class="title">
-			⚡ Резюме
-		</h2>
-
-		<div class="content__text">
-			<p>
-				Фан-токены открывают фанатам уникальные способы взаимодействия с любимыми командами. Поскольку платформа
-				фан-токенов
-				Binance разрабатывает все новые способы использования фан-токенов, в будущем PORTO принесет владельцам еще
-				больше
-				захватывающих возможностей.
-			</p>
+			<div class="content__text">
+				<p class="text">
+					Фан-токены открывают фанатам уникальные способы взаимодействия с любимыми командами. Поскольку платформа
+					фан-токенов
+					Binance разрабатывает все новые способы использования фан-токенов, в будущем PORTO принесет владельцам еще
+					больше
+					захватывающих возможностей.
+				</p>
+			</div>
 		</div>
 	</section>
 
@@ -345,14 +350,8 @@
 		</div>
 
 		<div class="interesting__line">
-
 		</div>
-
 	</section>
-
-
-
-
 
 
 
